--- a/index.html
+++ b/index.html
@@ -591,7 +591,10 @@
                     <option value="1.5">1.5x</option>
                     <option value="1.75">1.75x</option>
                     <option value="2.0">2.0x</option>
+                    <option value="2.25">2.25x</option>
                     <option value="2.5" selected>2.5x</option>
+                    <option value="2.75">2.75x</option>
+                    <option value="3.0">3.0x</option>
                 </select>
             </label>
             <label><input type="checkbox" id="settingDragSubtitle" disabled><span> Drag subtitle up and down (Not Implemented)</span></label>
