--- a/index.html
+++ b/index.html
@@ -597,10 +597,28 @@
                     <option value="1.5">1.5x</option>
                     <option value="1.75">1.75x</option>
                     <option value="2.0">2.0x</option>
+                    <option value="2.15">2.15x</option>
+                    <option value="2.2">2.2x</option>
                     <option value="2.25">2.25x</option>
+                    <option value="2.3">2.3x</option>
+                    <option value="2.4">2.4x</option>
                     <option value="2.5" selected>2.5x</option>
+                    <option value="2.6">2.6x</option>
+                    <option value="2.7">2.7x</option>
                     <option value="2.75">2.75x</option>
+                    <option value="2.8">2.8x</option>
+                    <option value="2.9">2.9x</option>
                     <option value="3.0">3.0x</option>
+                    <option value="3.1">3.1x</option>
+                    <option value="3.2">3.2x</option>
+                    <option value="3.3">3.3x</option>
+                    <option value="3.4">3.4x</option>
+                    <option value="3.5">3.5x</option>
+                    <option value="3.6">3.6x</option>
+                    <option value="3.7">3.7x</option>
+                    <option value="3.8">3.8x</option>
+                    <option value="3.9">3.9x</option>
+                    <option value="4.0">4.0x</option>
                 </select>
             </label>
             <label><input type="checkbox" id="settingDragSubtitle" disabled><span> Drag subtitle up and down (Not Implemented)</span></label>
